import os

genfile = [['login_service.proto', '../../../../login_server/src/service/'],
['db_service.proto', '../../../../database_server/src/service/'],
['deploy_service.proto', '../../../../deploy_server/src/service/'],
['ms_service.proto', '../../../../master_server/src/service/'],
['gs_service.proto', '../../../../game_server/src/service/'],
['gw_service.proto', '../../../../gateway_server/src/service/']
]
